Preparando para publicar

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a target="_blank" href="https://unsplash.com/pt-br/fotografias/g69O4A5WlTM?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"><img class="imagem__mar" src="assets/foto-natureza.jpg" alt="Foto do por do sol sobre o mar de "></a>
                 </header>
                 <p class="artigo__paragrafo">
-                    Lorem <a class="artigo__paragrafo" href="https://lipsum.com/feed/html" target="_blank">ipsum dolor sit amet</a>, consectetur adipiscing elit. Donec eget urna sodales, ultrices erat sed, commodo augue. Sed vitae nunc vestibulum, varius nulla id, maximus urna. Aenean mattis massa eros, ac mattis eros finibus ac. Praesent laoreet neque augue, eget varius dui eleifend eu. Vestibulum consequat imperdiet nunc, non ullamcorper tortor sollicitudin eget. Donec venenatis orci urna, vel ullamcorper turpis bibendum sit amet. Nunc nec odio elit. Etiam vulputate risus id ligula sodales, non condimentum lacus pellentesque. Vestibulum sit amet tortor nec nibh fringilla molestie. Sed ut ligula ultrices metus sagittis placerat et non ex. Etiam quis gravida sapien, malesuada placerat felis. Curabitur eu congue arcu.
+                    A jornada tem um princípio, mas não tem fim... O medo faz parte do nosso caminho, desistir não. Transicionar a carreira é mais um desafio, ter a Dio me ajuda a aumentar a certeza da minha escolha. Me encontro no que faço, meus conhecimentos em saúde e todas as pessoas que pude conhecer até o momento me trouxeram a fazer o que faço hoje. Conhecimento não se perde, se soma. A dúvida e o medo ainda existem em mim, eles só não podem nos paralisar nesse caminho de muitos aprendizados e novos encontros. Olhando meus primeiros passos em Desenvolvimento Web, vamos valorizar nossas conquistas, nos petrificamos ao pensar o que falta sem pensar no que já conquistamos! Sou mulher, sou PcD e estou em transição de carreira, vamos nos conectar.
                 </p>
             </article>
         </section>
@@ -37,7 +37,7 @@
                     <a class="lista__rodape__itens" href="https://github.com/SadyBeca" target="_blank">GitHub</a>
                 </li>
                 <li>
-                    <a class="lista__rodape__itens" href="mailto:rebecasadyribeiro@gmail.com" target="_blank">Email</a>
+                    <a class="lista__rodape__itens" href="mailto:" target="_blank">Email</a>
                 </li>
             </ul>
         </footer>
